Extract function from min/max Format code

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
     <title>
         Array lib
@@ -6,6 +7,6 @@
 </head>
 
 <body>
-    <script src="ArrLib.js"></script>
+    <script src="arr-lib.js"></script>
     <script src="script.js"></script>
 </body>
